[gd_scene load_steps=7 format=3 uid="uid://cfxq8ft62yivo"]

[ext_resource type="Texture2D" uid="uid://di6cqi1orsjy5" path="res://assets/bg/finish_screen.png" id="1"]
[ext_resource type="FontFile" uid="uid://dbmymvpiyrf54" path="res://assets/fonts/WigglyCurvesRegular.ttf" id="2"]
[ext_resource type="Script" path="res://FinishScreen.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://tlbofpdgi1ly" path="res://assets/sound/rooster3.mp3" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0

[node name="FinishScreen" type="Node2D"]
script = ExtResource("3")

[node name="BgSprite" type="Sprite2D" parent="."]
position = Vector2(512, 132)
texture = ExtResource("1")

[node name="RestartButton" type="Button" parent="."]
offset_left = 350.0
offset_top = 500.0
offset_right = 650.0
offset_bottom = 560.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 35
text = "RESTART"
icon_alignment = 1

[node name="WinLabel" type="Label" parent="."]
offset_top = 30.0
offset_right = 1023.0
offset_bottom = 82.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 60
text = "You won all eggs!! Congratulation!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GenLabel" type="Label" parent="."]
offset_top = 30.0
offset_right = 1023.0
offset_bottom = 82.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 60
text = "You won % eggs! Not all! Try again!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
